src/objects/Dashboard_Section__c.object
<CustomObject>
    <description>A section of a dashboard that contains the maps, graphs, selectors, etc. Allows for independent sections to be in the same dashboard</description>
    <fields>
        <fullName>Dashboard__c</fullName>
        <description>A section of a dashboard that contains the maps, graphs, selectors, etc. Allows for independent sections to be in the same dashboard</description>
        <inlineHelpText>Select the dashboard that this section belongs to</inlineHelpText>
        <label>Dashboard</label>
        <referenceTo>Dashboard__c</referenceTo>
        <relationshipLabel>Dashboard Sections</relationshipLabel>
        <relationshipName>Dashboard_Sections</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Display_Order__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The order in which the sections should be displayed</description>
        <inlineHelpText>Sorted in ascending order</inlineHelpText>
        <label>Display Order</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Has_Graphs__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates that this section contains graphs</description>
        <inlineHelpText>Check if this section has graphs in it</inlineHelpText>
        <label>Has Graphs</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_Maps__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if this section contains maps</description>
        <inlineHelpText>Check if the section contains any maps</inlineHelpText>
        <label>Has Maps</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_Metrics__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if this section contains metrics</description>
        <inlineHelpText>Check if this section contains any metrics</inlineHelpText>
        <label>Has Metrics</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_Selector__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if this section should have a selector in it</description>
        <inlineHelpText>Check if this selection has a selector in it that controls the metrics, maps, graphs, etc displayed</inlineHelpText>
        <label>Has Selector</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Indicates if this section is active i.e. should be displayed on the dashboard</description>
        <inlineHelpText>Uncheck if this section should not be on the dashboard</inlineHelpText>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <description>Title to display on the page section that contains this section</description>
        <inlineHelpText>Enter the title that will head this section on the dashboard</inlineHelpText>
        <label>Title</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <label>Dashboard Section</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>Title__c</columns>
        <columns>Dashboard__c</columns>
        <columns>Display_Order__c</columns>
        <columns>Has_Graphs__c</columns>
        <columns>Has_Maps__c</columns>
        <columns>Has_Metrics__c</columns>
        <columns>Has_Selector__c</columns>
        <columns>Is_Active__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>DS{0000000000}</displayFormat>
        <label>Dashboard Section Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Dashboard Sections</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>